# TempoEstimator

./: CMakeLists.txt  README.md
pipeline/: CMakeLists.txt  abstract_pipeline_head.cpp  abstract_pipeline_head.hpp  abstract_pipeline_node.cpp  abstract_pipeline_node.hpp  audio_file_reader.cpp  audio_file_reader.hpp  complex_power.cpp  complex_power.hpp  fft_processor.cpp  fft_processor.hpp  fft_processor_config.cpp  fft_processor_config.hpp  tempo_estimator.cpp  tempo_estimator.hpp  type_converter.hpp
sample_input/: Sample files are public domain.txt
tempo-estimator/: CMakeLists.txt  main.cpp
tempo_estimator/: main.cpp
utility/: CMakeLists.txt  pcm_mono_audio_data.cpp  pcm_mono_audio_data.hpp  proc_data.cpp  proc_data.hpp  thread_squad.cpp  thread_squad.hpp  util.cpp  util.hpp
